added potential articles

--- a/tutorials/golang/05.Verzweigungen-If-Else.md
+++ b/tutorials/golang/05.Verzweigungen-If-Else.md
@@ -26,7 +26,7 @@ Durch Logikgatter ist es möglich mehrere Abfragen zu kombinieren. Dazu werden d
   |----------|--------|---------------------------------------------------|
   | !        | NOT    | Tauscht True zu False und False zu True           |
   | &&       | AND    | Ist wahr, wenn zwei Statements wahr sind          |
-  | \|\      | OR     | Ist wahr, wenn eins von zwei Statements wahr ist  |
+  | \|\|     | OR     | Ist wahr, wenn eins von zwei Statements wahr ist  |
 
   ```go
   if (21 >= 23) && ("hello" == "hello") {
