restructed files see issue #2

--- a/tutorials/golang/04.Variablen/04.Variablen.md
+++ b/tutorials/golang/04.Variablen/04.Variablen.md
@@ -5,7 +5,6 @@ Variablen sind sehr schnelle Speicherbereiche, welche primitive Datentypen handh
 Variablen dürfen keine Keywords wie `func` oder `var` sein und müssen mit einem kleinen Buchstaben beginnen. Z.B. `userAge`, `productPrice`, `currentTimeHour`
 
 ## Variablen Scoping
-
 Eine Variable ist verfügbar, wenn einer der drei Gesichtspunkte erfüllt ist:
 - Die Variable wurde in einer Funktion implementiert und in der gleichen Funktion verwendet
 - Die Variable wurde im Paket implementiert und wurde in der gleichen Datei oder einer Datei, welche im gleichen Paket ist, aufgerufen
@@ -47,20 +46,30 @@ Fließkommazahlen sind Zahlen mit Nachkommastellen.
 
 3. Sonstiges
 
-  | Typ     | Beschreibung | Defaultvalue         |
-  |---------|---------|---------------------------|
-  | string  | Text    | “” (leerer Text)          |
-  | byte    | Zeichen | 0 (Zeichen ASCII)         |
-  | rune    | Zeichen | 0 (Zeichen Unicode UTF-8) |
+  | Typ         | Beschreibung | Defaultvalue                                     |
+  |-------------|--------------|--------------------------------------------------|
+  | string      | Text         | “” (leerer Text)                                 |
+  | byte        | Zeichen      | 0 (uint8 Zeichen ASCII)                          |
+  | rune        | Zeichen      | 0 (int 32 Zeichen Unicode UTF-8)                 |
+  | complex     | Zeichen      | Je nach System (32, 64) -> 64 oder 128 bit       |
+  | complex64   | Zeichen      | komplexe float32 als reelle und imaginäre Zahlen |
+  | complex128  | Zeichen      | komplexe float64 als reelle und imaginäre Zahlen |
 
+  *Beispiel complex*
+  ```go
+  var complx complex64 = 2i + 3
+  fmt.Println(complx)
+  ```
 
-4. Variablen definieren
+## Variablen definieren
 Um einen primitiven Datentypen zu definieren, hat Golang die Anordnung an die englische Sprache angepasst. Zuerst wird definiert, dass du eine Variable deklarieren möchtest, danach der Variablenname und anschließend der Typ. Danach kann der Wert ganz normal definiert werden.
   ```go
   var helloWorld string = “Hello World”
   var eineNull int = 0
   ```
-Alternativ gibt es noch die Möglichkeit den Datentypen selbstständig herauszufinden
+
+## Walross-Operator
+Alternativ gibt es noch die Möglichkeit den Datentypen selbstständig herauszufinden mit dem Walross-Operator:
   ```go
   statement := "Five Finger Death Punch rocks!"
   ```
@@ -86,9 +95,17 @@ Arrays sind Listen aus primitiven Datentypen, welche eine feste Größe haben. D
 
 ## NIL
 Nil beschreibt einen uninitialisierten Wert für Pointer, Interfaces, Maps, Slices, Channels und Funktionstypen. Er wird hauptsächlich zum Errorhandlung verwendet.
+```go
+func function() (test string, error err) {
+
+}
+```
 
 ## Wert verweigern
 Soll eine Fehlermeldung ignoriert werden (dazu später mehr) oder ein gewisser Wert aus einer Liste uninteressant sein, kann der Wert auch verweigert werden. Dazu wird der `_` verwendet. Der Wert landet nun im void.
+```go
+var, _ = function()
+```
 
 ## Werte aus Variablen tauschen
 Die Werte können miteinander getauscht werden, indem beide Variablen gleichzeitig unterschiedlich überschrieben werden.
